# mail-fetch

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
src/: database.rs  email_processor.rs  imap_client.rs  main.rs  scheduler.rs
